fix: snippet spacing and text size

--- a/packages/components/_provisional/src/snippet/styles/index.module.scss
+++ b/packages/components/_provisional/src/snippet/styles/index.module.scss
@@ -3,9 +3,10 @@
 
 .root {
   @include text.text-base;
+  @include text.text-variation(small);
 
   display: block;
-  padding: theme.get-spacing(3);
+  padding: theme.get-spacing(1.5);
   border-radius: theme.get-spacing(1);
   background-color: theme.get-color(neutral-light-1-5);
   font-family: monospace;
